test/accept/09-for_with_inline_set.imgine
image watermark = image("path/to/watermark.png");
image image_1 = image("path/to/image_1.jpg");
image image_2 = image("path/to/image_2.tiff");
image image_3 = image("path/to/image_3");

watermark.apply(filter().parameter(opacity=0.5));

for im in set(image_1, image_2, image_3) {
    im.overlap(watermark, position=bottom-right);
    im.save();
}